fixed centre alignment of reviews

--- a/frontend/src/components/ProductDetails/ProductDetails.css
+++ b/frontend/src/components/ProductDetails/ProductDetails.css
@@ -147,8 +147,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center;
-    /*border: 1px solid rgba(0, 0, 0, 0.2);*/
     padding: 1vmax 0;
     margin: 1vmax 0;
 }
